deploy-generic-11152022/deploy-generic-11152022-output/deploy-generic-11152022-9090-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "370"
  name: deploy-generic-11152022-9090-route
  namespace: datapowermvp
spec:
  to:
    kind: Service
    name: deploy-generic-11152022-service
    weight: 100
  port:
    targetPort: deploy-generic-11152022-9090
  tls:
    termination: passthrough
  wildcardPolicy: None
